tests/unit/default/syntax-error/012-create-t.x.t
---- IN ----
+%|
---- OUT ----
---- ERR ----
syntax: expected <name> after `+%` near `|` at position 2 - at line 1
---- EXIT ----
1
